...
        <scene sceneID="l3H-wu-qVM">
            <objects>
                <tabBarController title="Chl Entry" id="sVE-A7-Rfj" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="7Ef-bk-lhw"/>
                    <tabBar key="tabBar" contentMode="scaleToFill" id="Juy-Cx-Asf">
...
                                            <constraint firstAttribute="height" constant="35" id="FO2-b0-woW"/>
                                        </constraints>
                                        <state key="normal" title="SUBMIT">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="mg/L" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UK7-tr-bRy">
                                        <rect key="frame" x="172" y="244.5" width="161" height="28"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
        <scene sceneID="mKr-oC-8OT">
            <objects>
                <tabBarController title="PO4 Entry" id="wEE-EB-KbE" userLabel="PO4 Entry" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="T0k-GV-xRf"/>
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lH0-Yz-hWE">
...
        <scene sceneID="dSP-SD-sft">
            <objects>
                <viewController id="hw7-Ot-7xr" userLabel="DATALOG" customClass="DataLogViewController" customModule="Algae" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ghx-FZ-PNx"/>
...
                                        </variation>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="°C" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cad-gn-dsj">
                                        <rect key="frame" x="172" y="76" width="161" height="28"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="87.5" y="455" width="200" height="30"/>
                                        <color key="backgroundColor" red="0.021847909190000001" green="0.68221745469999995" blue="0.43763557759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Data Set">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                        <rect key="frame" x="87.5" y="495" width="200" height="30"/>
                                        <color key="backgroundColor" red="0.021847909190000001" green="0.68221745469999995" blue="0.43763557759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Edit Data Set">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="DATA" image="Binary File_000000_32" id="2EN-Ow-rZC"/>
                    <connections>
                        <outlet property="chlaLabel" destination="O2j-2s-niR" id="c2n-Ms-pEE"/>
...
                        <color key="backgroundColor" red="0.28107216619999997" green="0.30745128989999998" blue="0.57800356220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="GRAPH" image="Normal Distribution Histogram_000000_32" id="6uD-Bl-feE"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7zx-Y3-zLi" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="μg/L" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sz8-A3-Z75">
                                        <rect key="frame" x="172" y="284" width="169" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
