...
        view.addGestureRecognizer(tap)
        
        self.uiToolbar = UIToolbar(frame: CGRect(x: 0, y: 0, width: 320, height: 50))
        self.uiToolbar.barStyle       = UIBarStyle.default
        let flexSpace              = UIBarButtonItem(barButtonSystemItem: UIBarButtonItem.SystemItem.flexibleSpace, target: nil, action: nil)
        let done: UIBarButtonItem  = UIBarButtonItem(title: "Done", style: UIBarButtonItem.Style.plain, target: self, action: #selector(self.dismissKeyboard))
        let next: UIBarButtonItem  = UIBarButtonItem(title: "Next", style: UIBarButtonItem.Style.plain, target: self, action: #selector(self.nextField))
        
        var items = [UIBarButtonItem]()
        items.append(done)
        items.append(flexSpace)
        items.append(next)
        
...
