...
        if changeColor {
            button.backgroundColor = MyConstants.Colors.green
            button.setTitle("\u{2713}", for: UIControl.State.normal)
            button.titleLabel?.font = UIFont.systemFont(ofSize: 40)
        } else {
            button.backgroundColor = UIColor.lightGray
            button.setTitle("SET", for: UIControl.State.normal)
            button.titleLabel?.font = UIFont.systemFont(ofSize: UIFont.systemFontSize)
        }
    }
    
    @objc func clear(sender: AnyObject?) {
        
...
